parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    VAR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON programa2 programa3 main
Rule 2     programa2 -> vars programa2
Rule 3     programa2 -> empty
Rule 4     programa3 -> func programa3
Rule 5     programa3 -> empty
Rule 6     main -> MAIN LBRA mainvars main2 RBRA
Rule 7     main2 -> estatuto main2
Rule 8     main2 -> empty
Rule 9     mainvars -> vars mainvars
Rule 10    mainvars -> empty
Rule 11    vars -> type idmv vars2 SEMICOLON
Rule 12    vars2 -> empty
Rule 13    vars2 -> COMMA idmv vars2
Rule 14    bloque -> LBRA bloque2 RBRA
Rule 15    bloque2 -> empty
Rule 16    bloque2 -> estatuto bloque2
Rule 17    type -> BOOL
Rule 18    type -> CHAR
Rule 19    type -> INT
Rule 20    type -> NUM
Rule 21    exlog -> exlog2 expresion exlog3
Rule 22    exlog2 -> NOT
Rule 23    exlog2 -> empty
Rule 24    exlog3 -> AND exlog
Rule 25    exlog3 -> OR exlog
Rule 26    exlog3 -> empty
Rule 27    expresion -> exp expresion2
Rule 28    expresion2 -> empty
Rule 29    expresion2 -> RELOP exp
Rule 30    estatuto -> estatuto2 SEMICOLON
Rule 31    estatuto2 -> condicion
Rule 32    estatuto2 -> ciclo
Rule 33    estatuto2 -> funccall
Rule 34    estatuto2 -> asignacion
Rule 35    estatuto2 -> read
Rule 36    estatuto2 -> escritura
Rule 37    estatuto2 -> return
Rule 38    asignacion -> idmv EQUALS exlog
Rule 39    data -> NUMERIC
Rule 40    data -> CHARACTER
Rule 41    data -> LOGICAL
Rule 42    data -> INTEGER
Rule 43    data -> idmv
Rule 44    data -> funccall
Rule 45    data -> read
Rule 46    return -> RETURN return2
Rule 47    return2 -> exlog
Rule 48    return2 -> empty
Rule 49    idmvf -> ID idmvf2
Rule 50    idmvf2 -> LSBRA exp RSBRA idmvf3
Rule 51    idmvf2 -> LPAREN exp RPAREN
Rule 52    idmvf2 -> empty
Rule 53    idmvf3 -> LSBRA exp RSBRA
Rule 54    idmvf3 -> empty
Rule 55    idmv -> ID idmv2
Rule 56    idmv2 -> LSBRA exp RSBRA idmvf3
Rule 57    idmv2 -> empty
Rule 58    args -> type ID args2
Rule 59    args2 -> COMMA args
Rule 60    args2 -> empty
Rule 61    funccall -> ID LPAREN funccall2 RPAREN
Rule 62    funccall2 -> exp funccall3
Rule 63    funccall2 -> empty
Rule 64    funccall3 -> COMMA exp funccall3
Rule 65    funccall3 -> empty
Rule 66    condicion -> IF LPAREN exlog RPAREN bloque condicion2
Rule 67    condicion2 -> ELSE bloque
Rule 68    condicion2 -> empty
Rule 69    exp -> term exp2
Rule 70    exp2 -> empty
Rule 71    exp2 -> PLUS exp
Rule 72    exp2 -> MINUS exp
Rule 73    term -> factor term2
Rule 74    term2 -> empty
Rule 75    term2 -> TIMES term
Rule 76    term2 -> DIVIDE term
Rule 77    factor -> LPAREN exlog RPAREN
Rule 78    factor -> PLUS data
Rule 79    factor -> MINUS data
Rule 80    factor -> data
Rule 81    escritura -> WRITE LPAREN interior RPAREN
Rule 82    interior -> expresion escritura2
Rule 83    interior -> CHARACTER escritura2
Rule 84    escritura2 -> COMMA interior
Rule 85    escritura2 -> empty
Rule 86    read -> READ LPAREN read2 RPAREN
Rule 87    read2 -> CHARACTER
Rule 88    read2 -> empty
Rule 89    func -> FUNCTION functipo ID LPAREN funcargs RPAREN LBRA funcvars funcest RBRA
Rule 90    functipo -> type
Rule 91    functipo -> VOID
Rule 92    funcargs -> args
Rule 93    funcargs -> empty
Rule 94    funcest -> estatuto funcest
Rule 95    funcest -> empty
Rule 96    funcvars -> vars funcvars
Rule 97    funcvars -> empty
Rule 98    ciclo -> FOR LPAREN ciclo1 SEMICOLON exlog SEMICOLON asignacion RPAREN bloque
Rule 99    ciclo1 -> asignacion
Rule 100   ciclo1 -> empty
Rule 101   empty -> <empty>

Terminals, with rules where they appear

AND                  : 24
BOOL                 : 17
CHAR                 : 18
CHARACTER            : 40 83 87
COLON                : 
COMMA                : 13 59 64 84
DIVIDE               : 76
ELSE                 : 67
EQUALS               : 38
FOR                  : 98
FUNCTION             : 89
ID                   : 1 49 55 58 61 89
IF                   : 66
INT                  : 19
INTEGER              : 42
LBRA                 : 6 14 89
LOGICAL              : 41
LPAREN               : 51 61 66 77 81 86 89 98
LSBRA                : 50 53 56
MAIN                 : 6
MINUS                : 72 79
NOT                  : 22
NUM                  : 20
NUMERIC              : 39
OR                   : 25
PLUS                 : 71 78
PROGRAM              : 1
RBRA                 : 6 14 89
READ                 : 86
RELOP                : 29
RETURN               : 46
RPAREN               : 51 61 66 77 81 86 89 98
RSBRA                : 50 53 56
SEMICOLON            : 1 11 30 98 98
TIMES                : 75
VAR                  : 
VOID                 : 91
WRITE                : 81
error                : 

Nonterminals, with rules where they appear

args                 : 59 92
args2                : 58
asignacion           : 34 98 99
bloque               : 66 67 98
bloque2              : 14 16
ciclo                : 32
ciclo1               : 98
condicion            : 31
condicion2           : 66
data                 : 78 79 80
empty                : 3 5 8 10 12 15 23 26 28 48 52 54 57 60 63 65 68 70 74 85 88 93 95 97 100
escritura            : 36
escritura2           : 82 83
estatuto             : 7 16 94
estatuto2            : 30
exlog                : 24 25 38 47 66 77 98
exlog2               : 21
exlog3               : 21
exp                  : 27 29 50 51 53 56 62 64 71 72
exp2                 : 69
expresion            : 21 82
expresion2           : 27
factor               : 73
func                 : 4
funcargs             : 89
funccall             : 33 44
funccall2            : 61
funccall3            : 62 64
funcest              : 89 94
functipo             : 89
funcvars             : 89 96
idmv                 : 11 13 38 43
idmv2                : 55
idmvf                : 
idmvf2               : 49
idmvf3               : 50 56
interior             : 81 84
main                 : 1
main2                : 6 7
mainvars             : 6 9
programa             : 0
programa2            : 1 2
programa3            : 1 4
read                 : 35 45
read2                : 86
return               : 37
return2              : 46
term                 : 69 75 76
term2                : 73
type                 : 11 58 90
vars                 : 2 9 96
vars2                : 11 13

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON programa2 programa3 main

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON programa2 programa3 main

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON programa2 programa3 main

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . programa2 programa3 main
    (2) programa2 -> . vars programa2
    (3) programa2 -> . empty
    (11) vars -> . type idmv vars2 SEMICOLON
    (101) empty -> .
    (17) type -> . BOOL
    (18) type -> . CHAR
    (19) type -> . INT
    (20) type -> . NUM

    FUNCTION        reduce using rule 101 (empty -> .)
    MAIN            reduce using rule 101 (empty -> .)
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    NUM             shift and go to state 12

    programa2                      shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 7
    type                           shift and go to state 8

state 5

    (1) programa -> PROGRAM ID SEMICOLON programa2 . programa3 main
    (4) programa3 -> . func programa3
    (5) programa3 -> . empty
    (89) func -> . FUNCTION functipo ID LPAREN funcargs RPAREN LBRA funcvars funcest RBRA
    (101) empty -> .

    FUNCTION        shift and go to state 16
    MAIN            reduce using rule 101 (empty -> .)

    programa3                      shift and go to state 13
    func                           shift and go to state 14
    empty                          shift and go to state 15

state 6

    (2) programa2 -> vars . programa2
    (2) programa2 -> . vars programa2
    (3) programa2 -> . empty
    (11) vars -> . type idmv vars2 SEMICOLON
    (101) empty -> .
    (17) type -> . BOOL
    (18) type -> . CHAR
    (19) type -> . INT
    (20) type -> . NUM

    FUNCTION        reduce using rule 101 (empty -> .)
    MAIN            reduce using rule 101 (empty -> .)
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    NUM             shift and go to state 12

    vars                           shift and go to state 6
    programa2                      shift and go to state 17
    empty                          shift and go to state 7
    type                           shift and go to state 8

state 7

    (3) programa2 -> empty .

    FUNCTION        reduce using rule 3 (programa2 -> empty .)
    MAIN            reduce using rule 3 (programa2 -> empty .)


state 8

    (11) vars -> type . idmv vars2 SEMICOLON
    (55) idmv -> . ID idmv2

    ID              shift and go to state 19

    idmv                           shift and go to state 18

state 9

    (17) type -> BOOL .

    ID              reduce using rule 17 (type -> BOOL .)


state 10

    (18) type -> CHAR .

    ID              reduce using rule 18 (type -> CHAR .)


state 11

    (19) type -> INT .

    ID              reduce using rule 19 (type -> INT .)


state 12

    (20) type -> NUM .

    ID              reduce using rule 20 (type -> NUM .)


state 13

    (1) programa -> PROGRAM ID SEMICOLON programa2 programa3 . main
    (6) main -> . MAIN LBRA mainvars main2 RBRA

    MAIN            shift and go to state 21

    main                           shift and go to state 20

state 14

    (4) programa3 -> func . programa3
    (4) programa3 -> . func programa3
    (5) programa3 -> . empty
    (89) func -> . FUNCTION functipo ID LPAREN funcargs RPAREN LBRA funcvars funcest RBRA
    (101) empty -> .

    FUNCTION        shift and go to state 16
    MAIN            reduce using rule 101 (empty -> .)

    func                           shift and go to state 14
    programa3                      shift and go to state 22
    empty                          shift and go to state 15

state 15

    (5) programa3 -> empty .

    MAIN            reduce using rule 5 (programa3 -> empty .)


state 16

    (89) func -> FUNCTION . functipo ID LPAREN funcargs RPAREN LBRA funcvars funcest RBRA
    (90) functipo -> . type
    (91) functipo -> . VOID
    (17) type -> . BOOL
    (18) type -> . CHAR
    (19) type -> . INT
    (20) type -> . NUM

    VOID            shift and go to state 25
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    NUM             shift and go to state 12

    functipo                       shift and go to state 23
    type                           shift and go to state 24

state 17

    (2) programa2 -> vars programa2 .

    FUNCTION        reduce using rule 2 (programa2 -> vars programa2 .)
    MAIN            reduce using rule 2 (programa2 -> vars programa2 .)


state 18

    (11) vars -> type idmv . vars2 SEMICOLON
    (12) vars2 -> . empty
    (13) vars2 -> . COMMA idmv vars2
    (101) empty -> .

    COMMA           shift and go to state 28
    SEMICOLON       reduce using rule 101 (empty -> .)

    vars2                          shift and go to state 26
    empty                          shift and go to state 27

state 19

    (55) idmv -> ID . idmv2
    (56) idmv2 -> . LSBRA exp RSBRA idmvf3
    (57) idmv2 -> . empty
    (101) empty -> .

    LSBRA           shift and go to state 30
    COMMA           reduce using rule 101 (empty -> .)
    SEMICOLON       reduce using rule 101 (empty -> .)
    EQUALS          reduce using rule 101 (empty -> .)

    idmv2                          shift and go to state 29
    empty                          shift and go to state 31

state 20

    (1) programa -> PROGRAM ID SEMICOLON programa2 programa3 main .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON programa2 programa3 main .)


state 21

    (6) main -> MAIN . LBRA mainvars main2 RBRA

    LBRA            shift and go to state 32


state 22

    (4) programa3 -> func programa3 .

    MAIN            reduce using rule 4 (programa3 -> func programa3 .)


state 23

    (89) func -> FUNCTION functipo . ID LPAREN funcargs RPAREN LBRA funcvars funcest RBRA

    ID              shift and go to state 33


state 24

    (90) functipo -> type .

    ID              reduce using rule 90 (functipo -> type .)


state 25

    (91) functipo -> VOID .

    ID              reduce using rule 91 (functipo -> VOID .)


state 26

    (11) vars -> type idmv vars2 . SEMICOLON

    SEMICOLON       shift and go to state 34


state 27

    (12) vars2 -> empty .

    SEMICOLON       reduce using rule 12 (vars2 -> empty .)


state 28

    (13) vars2 -> COMMA . idmv vars2
    (55) idmv -> . ID idmv2

    ID              shift and go to state 19

    idmv                           shift and go to state 35

state 29

    (55) idmv -> ID idmv2 .

    COMMA           reduce using rule 55 (idmv -> ID idmv2 .)
    SEMICOLON       reduce using rule 55 (idmv -> ID idmv2 .)
    TIMES           reduce using rule 55 (idmv -> ID idmv2 .)
    DIVIDE          reduce using rule 55 (idmv -> ID idmv2 .)
    PLUS            reduce using rule 55 (idmv -> ID idmv2 .)
    MINUS           reduce using rule 55 (idmv -> ID idmv2 .)
    RSBRA           reduce using rule 55 (idmv -> ID idmv2 .)
    RELOP           reduce using rule 55 (idmv -> ID idmv2 .)
    AND             reduce using rule 55 (idmv -> ID idmv2 .)
    OR              reduce using rule 55 (idmv -> ID idmv2 .)
    RPAREN          reduce using rule 55 (idmv -> ID idmv2 .)
    EQUALS          reduce using rule 55 (idmv -> ID idmv2 .)


state 30

    (56) idmv2 -> LSBRA . exp RSBRA idmvf3
    (69) exp -> . term exp2
    (73) term -> . factor term2
    (77) factor -> . LPAREN exlog RPAREN
    (78) factor -> . PLUS data
    (79) factor -> . MINUS data
    (80) factor -> . data
    (39) data -> . NUMERIC
    (40) data -> . CHARACTER
    (41) data -> . LOGICAL
    (42) data -> . INTEGER
    (43) data -> . idmv
    (44) data -> . funccall
    (45) data -> . read
    (55) idmv -> . ID idmv2
    (61) funccall -> . ID LPAREN funccall2 RPAREN
    (86) read -> . READ LPAREN read2 RPAREN

    LPAREN          shift and go to state 39
    PLUS            shift and go to state 40
    MINUS           shift and go to state 42
    NUMERIC         shift and go to state 43
    CHARACTER       shift and go to state 44
    LOGICAL         shift and go to state 45
    INTEGER         shift and go to state 46
    ID              shift and go to state 50
    READ            shift and go to state 51

    exp                            shift and go to state 36
    term                           shift and go to state 37
    factor                         shift and go to state 38
    data                           shift and go to state 41
    idmv                           shift and go to state 47
    funccall                       shift and go to state 48
    read                           shift and go to state 49

state 31

    (57) idmv2 -> empty .

    COMMA           reduce using rule 57 (idmv2 -> empty .)
    SEMICOLON       reduce using rule 57 (idmv2 -> empty .)
    EQUALS          reduce using rule 57 (idmv2 -> empty .)
    TIMES           reduce using rule 57 (idmv2 -> empty .)
    DIVIDE          reduce using rule 57 (idmv2 -> empty .)
    PLUS            reduce using rule 57 (idmv2 -> empty .)
    MINUS           reduce using rule 57 (idmv2 -> empty .)
    RSBRA           reduce using rule 57 (idmv2 -> empty .)
    RELOP           reduce using rule 57 (idmv2 -> empty .)
    AND             reduce using rule 57 (idmv2 -> empty .)
    OR              reduce using rule 57 (idmv2 -> empty .)
    RPAREN          reduce using rule 57 (idmv2 -> empty .)


state 32

    (6) main -> MAIN LBRA . mainvars main2 RBRA
    (9) mainvars -> . vars mainvars
    (10) mainvars -> . empty
    (11) vars -> . type idmv vars2 SEMICOLON
    (101) empty -> .
    (17) type -> . BOOL
    (18) type -> . CHAR
    (19) type -> . INT
    (20) type -> . NUM

    IF              reduce using rule 101 (empty -> .)
    FOR             reduce using rule 101 (empty -> .)
    ID              reduce using rule 101 (empty -> .)
    READ            reduce using rule 101 (empty -> .)
    WRITE           reduce using rule 101 (empty -> .)
    RETURN          reduce using rule 101 (empty -> .)
    RBRA            reduce using rule 101 (empty -> .)
    BOOL            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    NUM             shift and go to state 12

    mainvars                       shift and go to state 52
    vars                           shift and go to state 53
    empty                          shift and go to state 54
    type                           shift and go to state 8

state 33

    (89) func -> FUNCTION functipo ID . LPAREN funcargs RPAREN LBRA funcvars funcest RBRA

    LPAREN          shift and go to state 55


state 34

    (11) vars -> type idmv vars2 SEMICOLON .

    BOOL            reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    CHAR            reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    INT             reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    NUM             reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    FUNCTION        reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    MAIN            reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    IF              reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    FOR             reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    ID              reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    READ            reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    WRITE           reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    RETURN          reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)
    RBRA            reduce using rule 11 (vars -> type idmv vars2 SEMICOLON .)


state 35

    (13) vars2 -> COMMA idmv . vars2
    (12) vars2 -> . empty
    (13) vars2 -> . COMMA idmv vars2
    (101) empty -> .

    COMMA           shift and go to state 28
    SEMICOLON       reduce using rule 101 (empty -> .)

    vars2                          shift and go to state 56
    empty                          shift and go to state 27

state 36

    (56) idmv2 -> LSBRA exp . RSBRA idmvf3

    RSBRA           shift and go to state 57


state 37

    (69) exp -> term . exp2
    (70) exp2 -> . empty
    (71) exp2 -> . PLUS exp
    (72) exp2 -> . MINUS exp
    (101) empty -> .

    PLUS            shift and go to state 60
    MINUS           shift and go to state 61
    RSBRA           reduce using rule 101 (empty -> .)
    RELOP           reduce using rule 101 (empty -> .)
    AND             reduce using rule 101 (empty -> .)
    OR              reduce using rule 101 (empty -> .)
    RPAREN          reduce using rule 101 (empty -> .)
    SEMICOLON       reduce using rule 101 (empty -> .)
    COMMA           reduce using rule 101 (empty -> .)

    exp2                           shift and go to state 58
    empty                          shift and go to state 59

state 38

    (73) term -> factor . term2
    (74) term2 -> . empty
    (75) term2 -> . TIMES term
    (76) term2 -> . DIVIDE term
    (101) empty -> .

    TIMES           shift and go to state 64
    DIVIDE          shift and go to state 65
    PLUS            reduce using rule 101 (empty -> .)
    MINUS           reduce using rule 101 (empty -> .)
    RSBRA           reduce using rule 101 (empty -> .)
    RELOP           reduce using rule 101 (empty -> .)
    AND             reduce using rule 101 (empty -> .)
    OR              reduce using rule 101 (empty -> .)
    RPAREN          reduce using rule 101 (empty -> .)
    SEMICOLON       reduce using rule 101 (empty -> .)
    COMMA           reduce using rule 101 (empty -> .)

    term2                          shift and go to state 62
    empty                          shift and go to state 63

state 39

    (77) factor -> LPAREN . exlog RPAREN
    (21) exlog -> . exlog2 expresion exlog3
    (22) exlog2 -> . NOT
    (23) exlog2 -> . empty
    (101) empty -> .

    NOT             shift and go to state 68
    LPAREN          reduce using rule 101 (empty -> .)
    PLUS            reduce using rule 101 (empty -> .)
    MINUS           reduce using rule 101 (empty -> .)
    NUMERIC         reduce using rule 101 (empty -> .)
    CHARACTER       reduce using rule 101 (empty -> .)
    LOGICAL         reduce using rule 101 (empty -> .)
    INTEGER         reduce using rule 101 (empty -> .)
    ID              reduce using rule 101 (empty -> .)
    READ            reduce using rule 101 (empty -> .)

    exlog                          shift and go to state 66
    exlog2                         shift and go to state 67
    empty                          shift and go to state 69

state 40

    (78) factor -> PLUS . data
    (39) data -> . NUMERIC
    (40) data -> . CHARACTER
    (41) data -> . LOGICAL
    (42) data -> . INTEGER
    (43) data -> . idmv
    (44) data -> . funccall
    (45) data -> . read
    (55) idmv -> . ID idmv2
    (61) funccall -> . ID LPAREN funccall2 RPAREN
    (86) read -> . READ LPAREN read2 RPAREN

    NUMERIC         shift and go to state 43
    CHARACTER       shift and go to state 44
    LOGICAL         shift and go to state 45
    INTEGER         shift and go to state 46
    ID              shift and go to state 50
    READ            shift and go to state 51

    data                           shift and go to state 70
    idmv                           shift and go to state 47
    funccall                       shift and go to state 48
    read                           shift and go to state 49

state 41

    (80) factor -> data .

    TIMES           reduce using rule 80 (factor -> data .)
    DIVIDE          reduce using rule 80 (factor -> data .)
    PLUS            reduce using rule 80 (factor -> data .)
    MINUS           reduce using rule 80 (factor -> data .)
    RSBRA           reduce using rule 80 (factor -> data .)
    RELOP           reduce using rule 80 (factor -> data .)
    AND             reduce using rule 80 (factor -> data .)
    OR              reduce using rule 80 (factor -> data .)
    RPAREN          reduce using rule 80 (factor -> data .)
    SEMICOLON       reduce using rule 80 (factor -> data .)
    COMMA           reduce using rule 80 (factor -> data .)


state 42

    (79) factor -> MINUS . data
    (39) data -> . NUMERIC
    (40) data -> . CHARACTER
    (41) data -> . LOGICAL
    (42) data -> . INTEGER
    (43) data -> . idmv
    (44) data -> . funccall
    (45) data -> . read
    (55) idmv -> . ID idmv2
    (61) funccall -> . ID LPAREN funccall2 RPAREN
    (86) read -> . READ LPAREN read2 RPAREN

    NUMERIC         shift and go to state 43
    CHARACTER       shift and go to state 44
    LOGICAL         shift and go to state 45
    INTEGER         shift and go to state 46
    ID              shift and go to state 50
    READ            shift and go to state 51

    data                           shift and go to state 71
    idmv                           shift and go to state 47
    funccall                       shift and go to state 48
    read                           shift and go to state 49

state 43

    (39) data -> NUMERIC .

    TIMES           reduce using rule 39 (data -> NUMERIC .)
    DIVIDE          reduce using rule 39 (data -> NUMERIC .)
    PLUS            reduce using rule 39 (data -> NUMERIC .)
    MINUS           reduce using rule 39 (data -> NUMERIC .)
    RSBRA           reduce using rule 39 (data -> NUMERIC .)
    RELOP           reduce using rule 39 (data -> NUMERIC .)
    AND             reduce using rule 39 (data -> NUMERIC .)
    OR              reduce using rule 39 (data -> NUMERIC .)
    RPAREN          reduce using rule 39 (data -> NUMERIC .)
    SEMICOLON       reduce using rule 39 (data -> NUMERIC .)
    COMMA           reduce using rule 39 (data -> NUMERIC .)


state 44

    (40) data -> CHARACTER .

    TIMES           reduce using rule 40 (data -> CHARACTER .)
    DIVIDE          reduce using rule 40 (data -> CHARACTER .)
    PLUS            reduce using rule 40 (data -> CHARACTER .)
    MINUS           reduce using rule 40 (data -> CHARACTER .)
    RSBRA           reduce using rule 40 (data -> CHARACTER .)
    RELOP           reduce using rule 40 (data -> CHARACTER .)
    AND             reduce using rule 40 (data -> CHARACTER .)
    OR              reduce using rule 40 (data -> CHARACTER .)
    RPAREN          reduce using rule 40 (data -> CHARACTER .)
    SEMICOLON       reduce using rule 40 (data -> CHARACTER .)
    COMMA           reduce using rule 40 (data -> CHARACTER .)


state 45

    (41) data -> LOGICAL .
